2008-03-04  Matthias Klose  <doko@ubuntu.com>

	* configure.ac: Check for xulrunner-1.9.
	* configure: Regenerated.

2008-03-03  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Fixed distclean target
	* Makefile.in: Regenerated.

2008-03-03  Gary Benson  <gbenson@redhat.com>

	* patches/icedtea-ports.patch
	(hotspot/src/share/vm/runtime/mutex.hpp): Reworked.

2008-03-03  Gary Benson  <gbenson@redhat.com>

	* patches/icedtea-ppc-stack-hack.patch: Removed.
	* Makefile.am (ICEDTEA_PATCHES): Removed the above.
	* Makefile.in: Regenerated.

	* ports/hotspot/src/os_cpu/linux_zero/vm/os_linux_zero.cpp
	(current_stack_region): Fudge reported stack size.

2008-02-29  Gary Benson  <gbenson@redhat.com>

	* patches/icedtea-ppc-stack-hack.patch: More.

2008-02-29  Gary Benson  <gbenson@redhat.com>

	* patches/icedtea-ppc-stack-hack.patch: New file.
	* Makefile.am (ICEDTEA_PATCHES): Added the above.
	* Makefile.in: Regenerated.

2008-02-28  Joshua Sumali  <jsumali@redhat.com>

	* Makefile.am
	(.PHONY): Remove clean-tools.
	(EXTRA_DIST): Add icedtea-webservices.patch
	(icedtea-compile.stamp): Removed this stamp to go back to old building of
	icedtea target.
	(icedtea-compile-debug.stamp): Likewise.
	(clean-tools-jar): Remove clean-tools dependency.
	(default-jnlp.stamp): Moved to be part of icedtea and icedtea-debug
	targets.
	(default-jnlp): Remove unused target.
	(icedtea-compile): Likewise.
	(icedtea-compile-ecj): Likewise.
	* Makefile.in: Regenerated.

2008-02-28  Gary Benson  <gbenson@redhat.com>

	* contrib/templater/README: Changed a URL.

2008-02-28  Lillian Angel  <langel@redhat.com>

	* Makefile.am
	(stamps/default-jnlp.stamp): Added dependency.
	(stamps/icedtea-compile.stamp): Removed touch at end of rule. Should
	follow what the comment says.
	(stamps/icedtea-compile-ecj.stamp): Likewise.
	(icedtea-compile): Added new alias target.
	(icedtea-compile-ecj): Likewise.
	* Makefile.in: Regenerated.

2008-02-28  Mark Wielaard  <mwielaard@redhat.com>
